--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
   <body>
     <script src="sketch.js"></script>
+    <iframe src="https://editor.p5js.org/cneary/full/wo6uP4DSC"
+    width = "100%" height = "100%" frameBorder ="0"
+    scrolling = "no" id = "testFrame" style = "position:absolute;" ></iframe>
+
   </body>
 
 </html>
