--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
 
   <body>
     <script src="sketch.js"></script>
+
+    <!-- self portrait link -->
     <iframe src="https://editor.p5js.org/cneary/full/wo6uP4DSC"
-    width = "100%" height = "100%" frameBorder ="0"
+    width = "400" height = "400" frameBorder ="0"
     scrolling = "no" id = "testFrame" style = "position:absolute;" ></iframe>
+
+    <!-- abbey road link -->
+    <!-- <iframe src="https://editor.p5js.org/cneary/full/aJHripOtg"
+    width = "400" height = "400" frameBorder ="0"
+    scrolling = "no" id = "testFrame" style = "position:absolute;"></iframe> -->
 
   </body>
 
