--- a/index.html
+++ b/index.html
@@ -13,13 +13,27 @@
 
     <!-- self portrait link -->
     <iframe src="https://editor.p5js.org/cneary/full/wo6uP4DSC"
-    width = "400" height = "400" frameBorder ="0"
-    scrolling = "no" id = "testFrame" style = "position:absolute;" ></iframe>
+    width = "400" height = "400" top = "0" left = "0"; ></iframe>
 
     <!-- abbey road link -->
-    <!-- <iframe src="https://editor.p5js.org/cneary/full/aJHripOtg"
-    width = "400" height = "400" frameBorder ="0"
-    scrolling = "no" id = "testFrame" style = "position:absolute;"></iframe> -->
+    <iframe src="https://editor.p5js.org/cneary/full/aJHripOtg"
+    width = "400" height = "400" top = "0" left = "450";></iframe>
+
+    <!-- conditionals project -->
+    <iframe src="https://editor.p5js.org/cneary/full/XULTkzUut"
+    width = "560" height = "400" top = "0" left = "900"></iframe>
+
+    <!-- fun project -->
+    <iframe src="https://editor.p5js.org/cneary/full/rLoON_ATl"
+    width = "450" height = "300" top = "400" left = "0"></iframe>
+
+    <!-- functions smiley project  -->
+    <iframe src="https://editor.p5js.org/cneary/full/6Nlu6On_a"
+    width = "450" height = "300" top = "400" left = "550"></iframe>
+
+    <!-- bouncing ball -->
+    <iframe src="https://editor.p5js.org/cneary/full/icic0Miro"
+    width = "450" height = "300" top = "400" left = "700"></iframe>
 
   </body>
 
