--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 
     <!-- conditionals project -->
     <iframe src="https://editor.p5js.org/cneary/full/XULTkzUut"
-    width = "560" height = "400" top = "0" left = "900"></iframe>
+    width = "560" height = "400" top = "0" left = "900";></iframe>
 
     <!-- fun project -->
     <iframe src="https://editor.p5js.org/cneary/full/rLoON_ATl"
-    width = "450" height = "300" top = "400" left = "0"></iframe>
+    width = "450" height = "300" top = "400" left = "0";></iframe>
 
     <!-- functions smiley project  -->
     <iframe src="https://editor.p5js.org/cneary/full/6Nlu6On_a"
-    width = "450" height = "300" top = "400" left = "550"></iframe>
+    width = "450" height = "300" top = "400" left = "550";></iframe>
 
     <!-- bouncing ball -->
     <iframe src="https://editor.p5js.org/cneary/full/icic0Miro"
