--- a/index.html
+++ b/index.html
@@ -9,31 +9,50 @@
   </head>
 
   <body>
+    <!-- title -->
+    <h1> Welcome to Cara's p5 Resume! </h1>
+
     <script src="sketch.js"></script>
 
     <!-- self portrait link -->
     <iframe src="https://editor.p5js.org/cneary/full/wo6uP4DSC"
-    width = "400" height = "400" top = "0" left = "0"; ></iframe>
+    width = "420" height = "400" top = "400" left = "0"; ></iframe>
+
+    <h2> I am 16 years old and I live in NYC! I love to swim and learn, especially math ;) Here are some of my favorite projects.</h2>
 
     <!-- abbey road link -->
     <iframe src="https://editor.p5js.org/cneary/full/aJHripOtg"
-    width = "400" height = "400" top = "0" left = "450";></iframe>
+    width = "420" height = "400" top = "0" left = "450";></iframe>
 
     <!-- conditionals project -->
     <iframe src="https://editor.p5js.org/cneary/full/XULTkzUut"
-    width = "560" height = "400" top = "0" left = "900";></iframe>
+    width = "580" height = "400" top = "0" left = "900";></iframe>
+
+    <h2> My GitHub is caraneary. DM me <3 </h2>
 
     <!-- fun project -->
     <iframe src="https://editor.p5js.org/cneary/full/rLoON_ATl"
-    width = "450" height = "300" top = "400" left = "0";></iframe>
+    width = "470" height = "300" top = "400" left = "0";></iframe>
 
     <!-- functions smiley project  -->
     <iframe src="https://editor.p5js.org/cneary/full/6Nlu6On_a"
-    width = "450" height = "300" top = "400" left = "550";></iframe>
+    width = "470" height = "300" top = "400" left = "550";></iframe>
 
     <!-- bouncing ball -->
     <iframe src="https://editor.p5js.org/cneary/full/icic0Miro"
-    width = "450" height = "300" top = "400" left = "700"></iframe>
+    width = "470" height = "300" top = "400" left = "700"></iframe>
+
+    <h2> Here are some fun facts about Cara: </h2>
+      <ul>
+        <li> I have 2 younger brothers </li>
+        <li> I am in 10th grade </li>
+        <li> "A coding genius, ahead of her times" - Ms. Mitchell</li>
+        <li> "Wonderful slideshow on Poland" - Dr. Cole</li>
+        <li> "Intelligent" - Dr. Lim</li>
+        <li> "Equilibrium" - Dr. Morgan & "Haha" - Random Science Teacher </li>
+        <li> I am a wounded soldier </li>
+
+      </ul>
 
   </body>
 
