--- a/index.html
+++ b/index.html
@@ -44,13 +44,15 @@
 
     <h2> Here are some fun facts about Cara: </h2>
       <ul>
-        <li> I have 2 younger brothers </li>
-        <li> I am in 10th grade </li>
+        <li> "The Pete to my Timmy T" - Andrea Christina Molina </li>
+        <li> "She really works hard on her forearm muscles" - Anisa Basler </li>
         <li> "A coding genius, ahead of her times" - Ms. Mitchell</li>
         <li> "Wonderful slideshow on Poland" - Dr. Cole</li>
         <li> "Intelligent" - Dr. Lim</li>
         <li> "Equilibrium" - Dr. Morgan & "Haha" - Random Science Teacher </li>
-        <li> I am a wounded soldier </li>
+        <li> "Cara will always need me as her helper. I've helped her all her life. Now I am like her, a cripple" - Alexandra Sofia Gilfond</li>
+        <li> "She's just a genius, there's no other way to descrive her. Other than prophecy" - Gaby </li>
+        <li> She coded so hard that she broke her arm </li>
 
       </ul>
 
